# ProgettoLaboratorio

./: CMakeLists.txt  CharacterRenderer.cpp  CharacterRenderer.h  GameCharacter.cpp  GameCharacter.h  Map.cpp  Map.h  MapRenderer.cpp  MapRenderer.h  Observer.h  Subject.h  findpath.cpp  findpath.h  main.cpp
test/: CMakeLists.txt  GameCharacterTest.cpp  MapRendererTests.cpp  findpathTestFixtures.cpp
